# bangio

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitbang.c  bitbang.h  linuxgpio.h  test.c
include/: bitbang.h  libbangio.h  linuxgpio.h
src/: linuxgpio.c
